refactor(arch): Introduce infrastructure layer for separation of concerns